[Mac] Security Chip Animation Edge Cases

Security chip will no longer animate out if the user edits  the
omnibox or switch tabs

BUG=643945

Review-Url: https://codereview.chromium.org/2650843002
Cr-Commit-Position: refs/heads/master@{#445749}

Former-commit-id: 6771b80c488c2c1b685ab2f674928ee09654ab15